# NI_Realtime_Linux_Liegroup

./: CMakeLists.txt  README.md
src/: callingSharedObject.cpp  liegroup_robotics.cpp  liegroup_robotics.h  main.cpp  mylib.cpp  mylib.h  type.h
